...
    <string name="run_name_label">Name:</string>
    <string name="run_starting_point_label">Starting Point:</string>
    <string name="run_difficulty_label">Difficulty:</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="notification">Notifications</string>

    <string name="miles_text">%1$s Miles</string>
    <string name="steps_text">%1$s Steps</string>
    <string name="date_text">On: %1$s</string>
    <string name="time_text">Time: %1$s</string>
...

    <string name="Difficulty_prompt">Choose a difficulty</string>
    <string-array name="difficulty_array">
        <item></item>
        <item>Easy</item>
        <item>Moderate</item>
        <item>Difficult</item>
    </string-array>

    <string name="LoopVsOutAndBack_prompt">Choose a feature</string>
    <string-array name="loopVsOut_arrays">
        <item></item>
        <item>Loop</item>
...
        <item></item>
        <item>Even Surface</item>
        <item>Uneven Surface</item>
    </string-array>

    <string name="favorite_indicator">favorite indicator</string>
    <string name="start_run">Start Run</string>
    <string name="user_height">user_height</string>
    <string name="no_value">--</string>
    <string name="user_string">user</string>

    <string name="teammate_name">Name:</string>
    <string name="teammate_name_hint">Teammate Name</string>
...
