<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/listed_run_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingTop="6dp"
            android:paddingRight="10dp"
            android:paddingBottom="6dp"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/favorite_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/favorite_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/favorite_indicator"
            android:tint="@color/starYellow"
            app:layout_constraintBottom_toBottomOf="@+id/listed_run_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/listed_run_name"
            app:srcCompat="@drawable/ic_star_border_white_24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/listed_run_name">

            <TextView
                android:id="@+id/run_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:paddingRight="10dp"
                android:paddingBottom="6dp"
                android:textColor="#0C0C0C"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/run_miles"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/run_miles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:paddingRight="10dp"
                android:paddingBottom="6dp"
                android:textColor="#0C0C0C"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/run_check"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/run_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/run_miles"
                app:srcCompat="@drawable/ic_check_green_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
