...
                android:textSize="18sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/run_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Laguna Run"
                android:inputType="text|textAutoComplete"
                android:visibility="visible"
...
                android:textSize="18sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/starting_point_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Penny Pines"
                android:inputType="text|textAutoComplete"
                android:visibility="visible"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="Difficulty:"
                android:textSize="18sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />


            <Spinner
                android:id="@+id/difficulty_spinner"
                android:layout_width="283dp"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:entries="@array/difficulty_array"
                android:prompt="@string/Difficulty_prompt"
                bind:layout_constraintEnd_toEndOf="parent"
...
